[package]
name = "yobatis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
mysql = "*"
log = {version = "0.4.14"}
env_logger = "0.9.0"
regex = "1.5.4"
xml-rs = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
minidom = "0.9"

[workspace]

[build-dependencies]
cc = "1.0"
bindgen = "0.59.1"
